--- a/publication-process/sections/00-intro.adoc
+++ b/publication-process/sections/00-intro.adoc
@@ -1,31 +1,20 @@
 
 == Introduction
 
-=== General
+CalConnect is committed in expanding the realm of open
+collaboration standards across the globe and across communities of
+practice.
 
-This document formalizes the processes of publication
-within CalConnect, covering the development and standardization of
-all types of public-facing documents produced by CalConnect, including:
+To facilitate its mission, the CalConnect Board of Directors has decided
+to align standardization and publication processes with international
+best practices, such as the ISO standardization process, and the
+<<WTOTBT>>.
+This document aims to achieve the said intention.
 
-* CalConnect Standards: normative documents through the CalConnect standardization process
-* CalConnect Guides: guidelines
-* CalConnect Specifications: informative specifications for the public
-* CalConnect Reports: internal and public reports, such as reporting on conference and IOP test events.
+The document describes the CalConnect standardization process, from
+conception, IPR policy, TC establishment, collaboration policies
+(liaisons), to the publishing of work items.
 
-Some internal documents not meant for public consumption do not go
-through this process.
-
-However, CalConnect Interoperability Test Event
-reports (both the public and internal versions) will go through an
-abbreviated last call and approval by TCC as noted in Section 7
-below.
-
-
-=== Supersedes
-
-This standard supersedes the following documents:
-
-* I0701 CalConnect Document Public Review and Comment
-* I0702 CalConnect Document Classification and Numbering
-* I0703 CalConnect Document Processes and Management
-
+Processes described in this document contain parts that relate
+to all CalConnect technical committees and the TCC, which
+carries responsibility of implementing these processes.
