--- a/publication-process/sections/06-process.adoc
+++ b/publication-process/sections/06-process.adoc
@@ -26,57 +26,67 @@ The following table provides a mapping between CalConnect project stages and
 ISO project stages. This document identifies stages
 according to the CalConnect project stage names.
 
-[cols="1,1,1,1",options="header"]
+[cols="1,1,1,1,1",options="header"]
 .Alignment between ISO and CalConnect project stages
 |===
 |Stage identifier
 |CalConnect stage
 |ISO harmonized stage (<<ISODIR1>>)
-|Deliverable
+|CalConnect deliverable
+|ISO deliverable
 
 |*Preliminary*
 |00 Preliminary
 |00 Preliminary
+|PWI
 |PWI
 
 |*Proposal*
 |10 Proposal
 |10 Proposal
 |NWIP
+|NWIP
 
 |*Preparatory*
 |20 Preparatory
 |20 Preparatory
+|WD
 |WD
 
 |*Committee*
 |30 Committee
 |30 Committee
 |CD
+|CD
 
 |*Enquiry*
 |40 Enquiry
 |40 Enquiry
+|DS
 |DIS
 
 |*Approval*
 |50 Approval
 |50 Approval
+|FDS
 |FDIS
 
 |*Publication*
 |60 Publication
 |60 Publication
+|CS
 |IS
 
 |*Review*
 |90 Review
 |90 Review
 |
+|
 
 |*Withdrawal*
 |95 Withdrawal
 |95 Withdrawal
+|
 |
 
 |===
@@ -160,9 +170,11 @@ document.
 
 Once a project is confirmed initiation:
 
-* the project shall be assigned a project number as decided by the TCC
-* the project's name and stage listed in the project registry
+* the project shall be assigned a project number as decided by the TCC; and
 
+* the project's name and stage shall be listed in the project registry.
+
+NOTE: This document supports the creation of a project registry.
 
 
 ===== First draft
@@ -285,25 +297,29 @@ Specifically:
   stage.
 
 
+[[stage-approval]]
 ==== Approval stage
 
 The goal of the approval stage is to create a "`final draft standard`"
 of the deliverable approved by the CalConnect membership.
 
 Following the TC last call, the Chair of the owning TC
-shall issue a last call for comments to both TCC and to
+shall issue a last call for formal comments to both TCC and to
 the full CalConnect mailing list for a period of at least two weeks.
 
-After the close of the commenting period,
-the Chair of TCC shall conduct a ballot of TCC members for
-a vote to approve publication.
+Details of formal comments are described in <<comments-formal>>.
+
+After the close of the commenting period, the Chair of TCC shall
+distribute the comments to the CalConnect membership, and
+conduct a ballot of TCC members for a vote to approve publication.
 
 The results of the poll conducted shall be posted to the
-TCC mailing list and TCC archive on the CalConnect Document Storage Facility.
+TCC mailing list and the TCC archive on the
+CalConnect Document Repository.
+
 All TCC members are required to vote in this ballot. A TCC member
 that did not vote in the TCC poll is considered to have violated
-his or her membership terms in the TCC, and has a X-week period
-to rectify.
+membership terms of the TCC, and has a 3-week period to rectify.
 
 A "`No`" vote from a TCC member must be accompanied with constructive
 comments.
@@ -312,6 +328,7 @@ A document must obtain 2/3 of "`Yes`" votes out of voters who voted
 "`Yes`" or "`No`" from TCC members for its publication.
 
 
+[[draft-stages]]
 ==== Draft development stages (Preparatory, Committee and Enquiry stages)
 
 . Each new draft version of the document as it is developed shall be
@@ -327,31 +344,19 @@ to all contributing TCs.
 list if CalConnect-wide membership comment is requested.
 
 . A draft version may be posted for external review and
-comments upon approval by TCC (see CalConnect Document Public
-Review and Comment). This would normally be done when the document is
-well-developed and external input and comment are appropriate.
+comments upon approval by TCC (see <<public-review>>).
+This is normally be done at the Enquiry and Approval stages,
+where the draft is considered more mature for appropriate
+external input.
 
 . Once initial approval is given by TCC, a draft may be posted
 for external review and comment multiple times.
-
 
 In every of the development stages, resolution of all outstanding
 comments is required to proceed towards ballot.
 
 
-// TODO: Move to document standard document
-NOTE: Draft versions of the document are CalConnect internal documents and
-must have the appropriate internal "`boilerplate`" material (Statement
-of IPR, etc.) inserted following the title page. The title page and
-every page of the document should emphasize that it is a draft document.
-
-// TODO: Move to document standard document
-NOTE: Draft versions of a document posted for external review and
-comment must have the appropriate "`external review & comment`" version
-of the "`boilerplate`" material (see CalConnect Document Public Review
-and Comment).
-
-
+[[pre-publication]]
 ==== Pre-publication stages (Enquiry and Approval stages)
 
 Once a "`draft standard`" or a "`final draft standard`" is approved
@@ -438,7 +443,6 @@ via the JCG.
 
 
 
-
 === Stub documents
 
 In some cases, upon completion of the approval stage,
@@ -458,21 +462,4 @@ time a decision is made to forward it to a standards body for
 progression as a standard, a new version with a stub document as
 described above will be published on the CalConnect website.
 
-
-
-=== Interoperability Test Event Reports
-
-CalConnect Interoperability Test Event (CITE) reports are created
-in both external (public) and internal versions by TC IOPTEST. However
-review and approval is conducted by all participants in the relevant
-CITE regardless of membership status.
-
-When the external and internal versions of the CITE reports have
-been completed, reviewed and approved by the participants in the event,
-the Chair of TC IOPTEST shall issue an abbreviated last call to the
-full CalConnect mailing list for a period of one week.
-
-Upon completion of the last call process the Chair of TC IOPTEST
-shall propose the external and internal documents to the Chair of TC
-CHAIRS for approval for publication.
 
