--- a/publication-process/sections/01-scope.adoc
+++ b/publication-process/sections/01-scope.adoc
@@ -8,13 +8,24 @@ Specifically, it describes the processes and requirements for the
 standardization and publication of the following document types
 produced by CalConnect, including:
 
-Standards:: normative documents developed through the CalConnect standardization process
+Directive:: normative document that provides requirements for
+internal CalConnect processes
 
-Guides:: guidelines
+Standard:: normative document that provide requirements, specifications or guidelines
+for the public
 
-Specifications:: informative specifications for the public
+Guide:: informative internal document for CalConnect technical committees
 
-Reports:: internal and public reports, such as conference or event reports.
+Specification:: informative specification for the public
+
+Report:: informative internal or public report
+
+Amendment:: normative document that amend a published CalConnect document
+
+Technical corrigendum:: document that describes a minor amendment
+of a published CalConnect document, that does not affect the overall validity
+of the original document
+
 
 This document does not apply to the following types of documents
 produced by CalConnect, although processes described in this document
@@ -23,3 +34,4 @@ can be optionally used as guidance for rigor:
 * policy statements;
 * internal administrative documents; and
 * how-to guides.
+
