--- a/publication-process/sections/05-document-types.adoc
+++ b/publication-process/sections/05-document-types.adoc
@@ -5,31 +5,69 @@
 All documents must have at least one document type, or category. A
 document may appear in more than one category, if appropriate.
 
-Directives::
-Internal normative documents approved by the CalConnect Board of Directors,
-developed by TC PUBLISH, that guide processes and procedures
+=== Directive
 
-Standards::
-Normative documents created through the CalConnect standardization process.
+Internal, normative documents approved by the CalConnect Board of Directors,
+developed by TC PUBLISH, that provides requirements for
+internal CalConnect processes.
 
-Guides::
-Guidelines. A document discussing problems or issues and making suggestions for
+
+=== Standard
+
+Normative documents created through the CalConnect standardization process
+that provide requirements, specifications or guidelines for the public.
+
+
+=== Guide
+
+Informative, internal documents that describe guidelines for the work of
+CalConnect technical committees.
+
+Often a document discussing problems or issues and making suggestions for
 action.
 
-Specifications::
+
+=== Specification
+
 Informative specifications for the public.
-An experimental specification intended for research and exploration,
-e.g. through trial implementations, to determine its usefulness and
-applicability. Proposals deemed successful would be candidates to be
-offered to an appropriate standards body for adoption and progression
-as a standard.
 
-Reports::
-Internal and public reports, such as reporting on conference and other events.
-A document reporting on an event or presenting findings of a study or
-research effort, which may reach conclusions but does not contain
-suggestions for action, except incidentally.
+It could be an experimental specification intended for research and exploration,
+such as to encourage trial implementations, to determine its usefulness and
+applicability.
 
-Administrative::
+A published Specification deemed successful would be candidates for progression
+towards a Standard.
+
+
+=== Amendment
+
+Normative documents that amend a published CalConnect document, such as a
+Standard.
+
+
+=== Technical corrigendum
+
+Document that describes a minor amendment of a published CalConnect
+document, that does not affect the overall validity of the original
+document.
+
+Could be a normative or informative document for public or
+internal consumption.
+
+
+=== Reports
+
+Informative document, reporting on an event or presenting findings
+of a study or research effort, which may reach conclusions but does
+not contain suggestions for action, except incidentally.
+
+Intended for internal or public consumption.
+
+[example]
+A report on a CalConnect conference.
+
+
+=== Administrative
+
 A document type for meeting minutes, proposals to committees, policy
 documents, and other material, generally of an internal nature.
