--- a/publication-process/sections/10-ipr.adoc
+++ b/publication-process/sections/10-ipr.adoc
@@ -4,12 +4,13 @@
 
 === Free of restrictions
 
-Both parties agree that text of all working documents developed under this agreement, as well as the final ISO deliverables will remain free of IPR restrictions that would limit their application.
+Text of all working documents as well as co-developed/co-published deliverables will remain free of IPR restrictions that would limit their application.
 
 === Copyright
 
 Copyright of standardization deliverables created under this document
 will be jointly owned by CalConnect and its authors.
+
 
 === member-sourced documents
 
@@ -19,11 +20,9 @@ non-exclusive, non-sub-licensable license
 to use contents of submitted documents to CalConnect,
 for the development and publishing of the deliverables.
 
-
 === Patented content
 
 Patented content in a standard will be governed by the CalConnect IPR policy.
 
 Any patents involved knowingly in a CalConnect deliverable must be made
 transparent prior to the DIS stage.
-
