--- a/sections/99-bibliography.adoc
+++ b/sections/99-bibliography.adoc
@@ -6,3 +6,6 @@
 
 * [[[CC10002,CC/DIR 10002:2018]]], _CalConnect Directive: Standard document requirements_
 
+* [[[ISODIR1,ISO/IEC Directives, Part 1]]], _ISO/IEC Directives, Part 1, Procedures for the technical work_
+
+* [[[ISODIR1C,ISO/IEC Directives, Part 1, Consolidated ISO Supplement]]], _ISO/IEC Directives, Part 1, Consolidated ISO Supplement, Procedures specific to ISO_
