--- a/csd-directive-standardization-publication.adoc
+++ b/csd-directive-standardization-publication.adoc
@@ -7,6 +7,7 @@
 :edition: 1
 :status: final-draft
 :revdate: 2018-11-07
+:published-date: 2018-11-07
 :script: Latn
 :technical-committee: PUBLISH
 :local-cache-only:
