Update to new structure at CDR

--- a/cc-10001.adoc
+++ b/cc-10001.adoc
@@ -10,9 +10,16 @@
 :published-date: 2018-11-07
 :script: Latn
 :technical-committee: PUBLISH
+:draft:
+:toc:
+:stem:
+:xrefstyle: short
+:imagesdir: images
+:docfile: cc-10001.adoc
+:mn-document-class: csd
+:mn-output-extensions: xml,html,pdf
 :local-cache-only:
 :data-uri-image:
-:toc:
 
 :sectnums!:
 
