--- a/cc-10001.adoc
+++ b/cc-10001.adoc
@@ -1,13 +1,13 @@
 = CalConnect Directive: Standardization and publication
 :title: CalConnect Directive: Standardization and publication
 :docnumber: 10001
-:copyright-year: 2018
+:copyright-year: 2019
 :language: en
 :doctype: directive
 :edition: 1
-:status: final-draft
-:revdate: 2018-11-07
-:published-date: 2018-11-07
+:status: published
+:revdate: 2019-01-18
+:published-date: 2019-01-18
 :script: Latn
 :technical-committee: PUBLISH
 :draft:
