chore: fix build

--- a/sources/cc-10001.adoc
+++ b/sources/cc-10001.adoc
@@ -9,6 +9,7 @@
 :published-date: 2019-01-18
 :technical-committee: PUBLISH
 :imagesdir: images
+:mn-document-class: cc
 :mn-output-extensions: xml,html,pdf
 :local-cache-only:
 :data-uri-image:
